# xo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
test/: CMakeLists.txt  alignment_test.h  buffer_test.cpp  buffer_test.h  container_test.cpp  container_test.h  data_test.h  delay_test.cpp  delay_test.h  enum_test.cpp  factory_test.cpp  factory_test.h  filter_test.h  math_test.cpp  math_test.h  math_tmp_test.h  performance_test.h  prop_node_test.cpp  prop_node_test.h  regression_test.cpp  regression_test.h  serializer_test.cpp  serializer_test.h  string_test.cpp  string_test.h  test.cpp  timer_test.cpp  timer_test.h  view_if_test.cpp  view_if_test.h
xo/: CMakeLists.txt  stdafx.h  xo_types.h
xo/container/: array.h  buffer_access.h  circular_buffer.h  circular_deque.h  circular_frame_buffer.h  collection.h  collection_ic.h  container_algorithms.h  container_tools.h  dynarray.h  flag_set.h  flat_map.h  flat_set.h  handle_vector.h  index_map.h  indexed_map.h  indexed_set.h  iterator_stream.h  label_vector.h  local_vector.h  pair_type.h  prop_node.cpp  prop_node.h  prop_node_cast.h  prop_node_tools.cpp  prop_node_tools.h  small_vector.h  sorted_vector.h  storage.h  storage_tools.h  stream_wrapper.h  table.h  vector_type.h  view_if.h  zip.h
xo/diagnose/: debug_storage.cpp  debug_storage.h  debug_tools.h  profiler.cpp  profiler.h  profiler_config.h  test_framework.cpp  test_framework.h
xo/filesystem/: filesystem.cpp  filesystem.h  path.cpp  path.h
xo/geometry/: aabb.h  angle.h  angle_type.h  axes_type.h  bounding_box.h  catmull_rom.h  dynmat.h  dynvec.h  euler_angles.h  geometry_algorithms.h  line.h  mat3.h  mat33.h  mat33_type.h  mat3_type.h  matrix.h  mirror_tools.h  path_alg.h  quat.h  quat_type.h  ray.h  scale3.h  segment.h  shape.cpp  shape.h  transform.h  transform_srt.h  vec.h  vec3.h  vec3_type.h  vec4.h  vec4_type.h  vec_alg.h  vec_type.h
xo/numerical/: average.h  bounded.h  bounds.h  compare.h  console_plot.h  constants.h  delayer.h  delta.h  filter.h  filter_1st_order.h  function_tools.h  functions.h  interpolation.h  linear_regression.h  math.h  numconst.h  piecewise_constant_function.h  piecewise_linear_function.h  polynomial.h  random.cpp  random.h  regression.h  regular_piecewise_linear_function.h  result_type.h
xo/serialization/: char_stream.cpp  char_stream.h  container_io.h  prop_node_serializer.cpp  prop_node_serializer.h  prop_node_serializer_ini.cpp  prop_node_serializer_ini.h  prop_node_serializer_xml.cpp  prop_node_serializer_xml.h  prop_node_serializer_zml.cpp  prop_node_serializer_zml.h  prop_node_tools.cpp  prop_node_tools.h  serialize.cpp  serialize.h
xo/shape/: aabb.h  box.cpp  box.h  capsule.h  cone.h  cylinder.h  plane.cpp  plane.h  shape.cpp  shape.h  shape_tools.h  sphere.h
xo/stream/: char_stream.cpp  prop_node_tools.cpp  prop_node_tools.h
xo/string/: dictionary.h  pattern_matcher.h  stack_string.h  string_cast.cpp  string_cast.h  string_cast_enum.h  string_tools.cpp  string_tools.h  string_type.h
xo/system/: assert.h  benchmark_tools.h  debug_storage.cpp  debug_storage.h  debug_timer.h  debug_tools.h  error_code.cpp  error_code.h  log.cpp  log.h  log_format.h  log_level.h  log_sink.cpp  log_sink.h  platform.h  prerequisites.h  profiler.cpp  profiler.h  profiler_config.h  settings.cpp  settings.h  system_tools.cpp  system_tools.h  test_case.cpp  test_case.h  test_framework.cpp  test_framework.h  test_main.h  type_class.h  version.h  xo_api.h  xo_config.h
xo/thread/: interruptible.cpp  stop_token.h  thread_priority.cpp  thread_priority.h
xo/time/: date.h  date_time.cpp  date_time.h  interval_checker.h  stopwatch.cpp  stopwatch.h  time.h  timer.cpp  timer.h  timer_v1.cpp  timer_v1.h  timer_v2.cpp  timer_v2.h
xo/time/deprecated/: date_time.h  timer_v1.h
xo/utility/: arg_parser.h  arithmetic.h  cached_var.h  color.cpp  color.h  color_gradient.h  data_algorithms.h  factory.h  file_resource_cache.h  frange.h  handle.h  hash.h  index.h  interpolation.h  interruptible.h  irange.h  memoize.h  memory_tools.h  optional.h  overload.h  pair_math.h  pointer_iterator.h  pointer_type.h  pointer_types.h  proxy.h  resource_cache.h  result.h  sfinae.h  side.h  smart_enum.h  type_tools.h  type_traits.h  types.h  variant_cast.h
xo_lua/: CMakeLists.txt  lua_register.h
xo_test/: CMakeLists.txt  alignment_test.cpp  angle_test.cpp  buffer_test.cpp  cached_var_test.cpp  color_test.cpp  container_test.cpp  data_test.cpp  delay_test.cpp  enum_test.cpp  euler_test.cpp  factory_test.cpp  filter_test.cpp  index_test.cpp  interpolation_test.cpp  log_test.cpp  mat3_test.cpp  mat_test.cpp  math_function_test.cpp  math_test.cpp  performance_test.cpp  prop_node_test.cpp  quat_test.cpp  regression_test.cpp  serializer_test.cpp  stdafx.h  string_test.cpp  test.cpp  test.h  test_tools.h  time_test.cpp  timer_test.cpp  vec_test.cpp  view_if_test.cpp
